<?xml version="1.0"?>
<package format="2">
  <name>drivenet</name>
  <version>1.0.0</version>
  <description>
    Wrapper for Nvidia Driveworks
  </description>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>libglew-dev</depend><!--TODO: Figure out what actually needs this library-->
  <maintainer email="ddd@sss.com">gao</maintainer>
  <license>GPLv3</license>

</package>
